Added style section to the rock out HTML template

--- a/template-RockOut-newAct.htm
+++ b/template-RockOut-newAct.htm
@@ -1,6 +1,16 @@
-<DOCTYPE>
+<DOCTYPE html>
 <html>
-<head><title></title></head>
+<head>
+    <style>
+        table {};
+        tr {};
+        td {};
+        h2 {};
+        h3 {};
+        p {};
+        a {};
+    </style>
+    <title></title></head>
 <body>
 <h2>attendee_name,</h2>
 <p>
