add table styles for highlit topics

--- a/template-RockOut-newAct.htm
+++ b/template-RockOut-newAct.htm
@@ -9,6 +9,13 @@
         h3 {};
         p {};
         a {};
+        table.highlight {};
+        table.highlight tr {};
+        table.highlight td {};
+        table.highlight h2 {};
+        table.highlight h3 {};
+        table.highlight p {};
+        table.highlight a {};
     </style>
     <title></title></head>
 <body>
